--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div style="text-align: center;">
     <h3>HUKU LOW</h3>
     <h3>が</h3>
-    <h3>すべてを解決します。</h3>
+    <h3>すべて解決します。</h3>
     <h3>↓↓↓</h3>
     <a href="http://ec2-35-78-64-213.ap-northeast-1.compute.amazonaws.com/"><h3 class="url">HUKU LOW サイト</h3></a>
     *注意*
