--- a/index.html
+++ b/index.html
@@ -65,3 +65,14 @@
     <br>PC上でのブラウザで開くことを推奨します。
     <hr style="height: 3px; background-color: #000000; ">
     </div>
+
+    <div style="text-align: center;">
+<h3>ちょっと見て！</h3>
+<br>
+「Huku low」名前の由来は
+服の悩みを少なくするという意味
+でhuku（服） low（悩みの数を少なく）。
+フクロウように服を賢く管理しようという意味合いがあります。
+</div>
+
+
