--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <div style="text-align: center;">
 <h3>ちょっと見て！</h3>
 <br>
-「Huku low」名前の由来は
-服の悩みを少なくするという意味
-でhuku（服） low（悩みの数を少なく）。
-フクロウように服を賢く管理しようという意味合いがあります。
+「Huku low」名前の由来は<br>
+服の悩みを少なくするという意味<br>
+でhuku（服） low（悩みの数を少なく）。<br>
+フクロウように服を賢く管理しようという意味合いがあります。<br>
 </div>
 
 
