--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 <h3>ちょっと見て！</h3>
 <br>
 「Huku low」名前の由来は<br>
-服の悩みを少なくするという意味<br>
-でhuku（服） low（悩みの数を少なく）。<br>
+服の悩みを少なくするという意味で<br>
+huku（服） low（悩みの数を少なく）。<br>
 フクロウように服を賢く管理しようという意味合いがあります。<br>
 </div>
 
